--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
           </ul>
         </nav>
       </header>
+
+      <main>
+        <section>
+            <div>
+              <h4>Preferences</h4>
+              <p>
+                We aim to make this site accessible to a wide audience and to ensure
+                a great experience for all users by conforming to World Wide Web
+                Consortium accessibility guidelines (W3C's WCAG).
+              </p>
+              <p>
+                However, if you are having trouble reading this website you can
+                change the way it looks or disable some of its functionalities.
+              </p>
+              <form>
+                <fieldset>
+                  <legend>Accessibility Options</legend>
+                  <label for="flash-checkbox">Allow flashing elements</label>
+                  <input
+                    type="checkbox"
+                    name="flash-checkbox"
+                    id="flash-checkbox"
+                    checked
+                  />
+                  <p>Untick this to disable flashing and movings elements.</p>
+                </fieldset>
+              </form>
+            </div>
+          </section>
+
+      </main>
     
 </body>
 </html>
