--- a/index.html
+++ b/index.html
@@ -1,58 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newspaper Article</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <header>
-        <h1><a href="#">Tech Returner News</a></h1>
-        <nav>
-          <ul>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Opinion</a></li>
-            <li><a href="#">Tech</a></li>
-            <li><a href="#">Sport</a></li>
-            <li><a href="#">Culture</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Lifestyle</a></li>
-            <li><a href="#">Jobs</a></li>
-          </ul>
-        </nav>
-      </header>
+      <h1><a href="#">Tech Returner News</a></h1>
+      <nav>
+        <ul>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Opinion</a></li>
+          <li><a href="#">Tech</a></li>
+          <li><a href="#">Sport</a></li>
+          <li><a href="#">Culture</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Lifestyle</a></li>
+          <li><a href="#">Jobs</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <main>
-        <section>
-            <div>
-              <h4>Preferences</h4>
-              <p>
-                We aim to make this site accessible to a wide audience and to ensure
-                a great experience for all users by conforming to World Wide Web
-                Consortium accessibility guidelines (W3C's WCAG).
-              </p>
-              <p>
-                However, if you are having trouble reading this website you can
-                change the way it looks or disable some of its functionalities.
-              </p>
-              <form>
-                <fieldset>
-                  <legend>Accessibility Options</legend>
-                  <label for="flash-checkbox">Allow flashing elements</label>
-                  <input
-                    type="checkbox"
-                    name="flash-checkbox"
-                    id="flash-checkbox"
-                    checked
-                  />
-                  <p>Untick this to disable flashing and movings elements.</p>
-                </fieldset>
-              </form>
-            </div>
-          </section>
-
-      </main>
+    <main>
+      <section>
+        <div>
+          <h4>Preferences</h4>
+          <p>
+            We aim to make this site accessible to a wide audience and to ensure
+            a great experience for all users by conforming to World Wide Web
+            Consortium accessibility guidelines (W3C's WCAG).
+          </p>
+          <p>
+            However, if you are having trouble reading this website you can
+            change the way it looks or disable some of its functionalities.
+          </p>
+          <form>
+            <fieldset>
+              <legend>Accessibility Options</legend>
+              <label for="flash-checkbox">Allow flashing elements</label>
+              <input
+                type="checkbox"
+                name="flash-checkbox"
+                id="flash-checkbox"
+                checked
+              />
+              <p>Untick this to disable flashing and movings elements.</p>
+            </fieldset>
+          </form>
+        </div>
+      </section>
+      <h2>Accessibility Features: Easy Wins</h2>
+      <h3>Handy tips on how to create accessible websites for everyone</h3>
+      <p>
+        <strong>Author:</strong>
+        <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> - 04.08.21
+      </p>
+      <img
+        src="article-image.jpg"
+        width="20%"
+        alt="Image for Accessibility Features: Easy Wins article"
+      />
+      <section>
+        <h4>Introduction</h4>
+        <p>
+          Tim Berners Lee dreamt of a World Wide Web that would be free and
+          accessible to everyone. Sadly, the modern web is littered with poorly
+          designed websites and difficult to navigate code (for both developers
+          and users). This often comes down to a lack of understanding around
+          different user needs.
+        </p>
+        <p>
+          Designing pages that are accessible for everyone shouldn’t be too
+          difficult. The developers at Tech Returners News have collated an
+          ‘easy wins' checklist for Web page accessibility.
+        </p>
+        <p>
+          Keep this guide handy... When creating your own websites you can check
+          these criteria off the list!
+        </p>
+      </section>
+      <section>
+        <h4>Accessibility Checks</h4>
+        <p>
+          Heading elements &amp; Page Titles: HTML heading elements have been
+          used to represent page structure, supporting assistive technologies
+          that allow page navigation from heading to heading.
+        </p>
+        <p>
+          Re-size Text: You can vary text size by using your browser's text
+          resize settings (through Options or Preferences), text-only zoom, page
+          zoom (which also zooms images, buttons etc) without incurring styling
+          issues / text over-lapping or being cut off the page.
+        </p>
+        <p>
+          Alternative text for images: All images have been given appropriate
+          alternative text.
+        </p>
+        <p>
+          Link text: All hyperlinks should make sense when read out of context,
+          and hyperlinks are clearly presented in a different text style from
+          normal body text. If a link opens in a new browser page, it has been
+          labelled as doing so.
+        </p>
+        <p>
+          JavaScript independence: Where JavaScript or other scripts are used
+          for navigation or functionality, an alternative mechanism has been put
+          in place in case your browser does not support these scripts.
+        </p>
+        <p>
+          Colour contrast: has been checked for text and background colour
+          combinations to ensure that the contrast is sufficient and I have also
+          ensured that information is not referenced by colour alone.
+        </p>
+        <p>
+          Style sheets: If style sheets are not supported or are turned off,
+          information on the site can still be accessed and read.
+        </p>
+        <p>
+          Forms: forms are marked up correctly so people can interact with them
+          using only the keyboard, voice input or screen readers. The form
+          labels themselves are clickable, increasing the target area and making
+          it easier to select small radio buttons of checkboxes.
+        </p>
+        <p>
+          <a href="#"
+            >For more information on Web Accessibility view: Easy Checks – A
+            First Review of Web Accessibility</a
+          >
+        </p>
+      </section>
+      <section>
+        <h4>Conclusion</h4>
+        <p>
+          By spending just a little more time on getting the building blocks of
+          the web right, developers can help create an Internet that works for
+          everyone.
+        </p>
+      </section>
+      <section>
+        <h4>More stories</h4>
+        <ul>
+          <li><a href="#">Tokyo Olympics: gold for Great Britain!</a></li>
+          <li><a href="#">A day in the life of</a></li>
+          <li>
+            <a href="#"
+              >Call for action as UK driver shortage hits supermarkets</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              >The six worst school sports memories of your childhood</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              >Clairvoyants evening cancelled from unforeseen circumstances</a
+            >
+          </li>
+          <li><a href="#">Safety meeting ends in accident</a></li>
+          <li>
+            <a href="#"
+              >Russian traffic officer with golden toilet is arrested after
+              police uncover massive bribery scheme</a
+            >
+          </li>
+          <li>
+            <a href="#">Jellyfish apocalypse is coming claim scientists</a>
+          </li>
+        </ul>
+      </section>
+    </main>
     
-</body>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Opinions</a></li>
+          <li><a href="#">Sport</a></li>
+          <li><a href="#">Culture</a></li>
+          <li><a href="#">Tech</a></li>
+        </ul>
+      </nav>
+      <p>&copy; 2021 Tech Returners News</p>
+    </footer>
+  </body>
 </html>
