--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
           it easier to select small radio buttons of checkboxes.
         </p>
         <p>
-          <a href="#"
-            >For more information on Web Accessibility view: Easy Checks – A
-            First Review of Web Accessibility</a
-          >
+          <a href="#">
+            For more information on Web Accessibility view: Easy Checks – A
+            First Review of Web Accessibility</a>
         </p>
       </section>
       <section>
@@ -144,26 +143,22 @@
           <li><a href="#">Tokyo Olympics: gold for Great Britain!</a></li>
           <li><a href="#">A day in the life of</a></li>
           <li>
-            <a href="#"
-              >Call for action as UK driver shortage hits supermarkets</a
-            >
+            <a href="#">
+                Call for action as UK driver shortage hits supermarkets</a>
           </li>
           <li>
-            <a href="#"
-              >The six worst school sports memories of your childhood</a
-            >
+            <a href="#">
+                The six worst school sports memories of your childhood</a>
           </li>
           <li>
-            <a href="#"
-              >Clairvoyants evening cancelled from unforeseen circumstances</a
-            >
+            <a href="#">
+                Clairvoyants evening cancelled from unforeseen circumstances</a>
           </li>
           <li><a href="#">Safety meeting ends in accident</a></li>
           <li>
-            <a href="#"
-              >Russian traffic officer with golden toilet is arrested after
-              police uncover massive bribery scheme</a
-            >
+            <a href="#">
+                Russian traffic officer with golden toilet is arrested after
+              police uncover massive bribery scheme</a>
           </li>
           <li>
             <a href="#">Jellyfish apocalypse is coming claim scientists</a>
@@ -171,7 +166,7 @@
         </ul>
       </section>
     </main>
-    
+
     <footer>
       <nav>
         <ul>
