feat: removing unnecessary fieldset

--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
             change the way it looks or disable some of its functionalities.
           </p>
           <form>
-            <fieldset>
-              <legend>Accessibility Options</legend>
-              <label for="flash-checkbox">Allow flashing elements</label>
-              <input
-                type="checkbox"
-                name="flash-checkbox"
-                id="flash-checkbox"
-                checked
-              />
-              <p>Untick this to disable flashing and movings elements.</p>
-            </fieldset>
+            <h4>Accessibility Options</h4>
+
+            <label for="flash-checkbox">Allow flashing elements</label>
+            <input
+              type="checkbox"
+              name="flash-checkbox"
+              id="flash-checkbox"
+              checked
+            />
+            <p>Untick this to disable flashing and movings elements.</p>
           </form>
         </div>
       </section>
@@ -79,6 +78,8 @@
           Keep this guide handy... When creating your own websites you can check
           these criteria off the list!
         </p>
+
+        <a href="#">What would a truly accessible city look like? Read more..</a>
       </section>
       <section>
         <h4>Accessibility Checks</h4>
@@ -126,7 +127,8 @@
         <p>
           <a href="#">
             For more information on Web Accessibility view: Easy Checks – A
-            First Review of Web Accessibility</a>
+            First Review of Web Accessibility</a
+          >
         </p>
       </section>
       <section>
@@ -144,21 +146,25 @@
           <li><a href="#">A day in the life of</a></li>
           <li>
             <a href="#">
-                Call for action as UK driver shortage hits supermarkets</a>
+              Call for action as UK driver shortage hits supermarkets</a
+            >
           </li>
           <li>
             <a href="#">
-                The six worst school sports memories of your childhood</a>
+              The six worst school sports memories of your childhood</a
+            >
           </li>
           <li>
             <a href="#">
-                Clairvoyants evening cancelled from unforeseen circumstances</a>
+              Clairvoyants evening cancelled from unforeseen circumstances</a
+            >
           </li>
           <li><a href="#">Safety meeting ends in accident</a></li>
           <li>
             <a href="#">
-                Russian traffic officer with golden toilet is arrested after
-              police uncover massive bribery scheme</a>
+              Russian traffic officer with golden toilet is arrested after
+              police uncover massive bribery scheme</a
+            >
           </li>
           <li>
             <a href="#">Jellyfish apocalypse is coming claim scientists</a>
@@ -168,13 +174,13 @@
     </main>
 
     <footer>
-        <ul>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Opinions</a></li>
-          <li><a href="#">Sport</a></li>
-          <li><a href="#">Culture</a></li>
-          <li><a href="#">Tech</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Opinions</a></li>
+        <li><a href="#">Sport</a></li>
+        <li><a href="#">Culture</a></li>
+        <li><a href="#">Tech</a></li>
+      </ul>
       <p>&copy; 2021 Tech Returners News</p>
     </footer>
   </body>
